--- a/app/views/admin/books/_form.html.erb
+++ b/app/views/admin/books/_form.html.erb
@@ -6,7 +6,7 @@
 </ul>
 <% end %>
 
-<%= form_for(:admin, book) do |form| %>
+<%= form_for([:admin, book]) do |form| %>
 <div class="field">
   
     <%= cover_image_tag book %>
