--- a/app/views/shared/frontend/_navbar.html.erb
+++ b/app/views/shared/frontend/_navbar.html.erb
@@ -20,8 +20,8 @@
       <div class="navbar-item">
         <div class="buttons">
         <% if user_signed_in? %>
-         <%= link_to current_user.email, edit_user_registration_path, class: "button is-primary" %>
-         <%= link_to "登出", new_user_session_path, class: "button is-primary" %>
+         <%= link_to current_user.email, edit_user_registration_path ,class: "button is-primary" %>
+         <%= link_to "登出", destroy_user_session_path, method: 'delete', class: "button is-primary" %>
         <% else %>
          <%= link_to "註冊", new_user_registration_path, class: "button is-primary" %>
          <%= link_to "登入", new_user_session_path, class: "button is-primary" %>
