--- a/app/views/admin/publishers/index.html.erb
+++ b/app/views/admin/publishers/index.html.erb
@@ -5,11 +5,11 @@
 <table class="table is-fullwidth">
   <thead>
     <tr>
-      <td>出版社名稱</td>
-      <td>電話</td>
-      <td>地址</td>
-      <td>備註</td>
-      <td></td>
+      <th>出版社名稱</th>
+      <th>電話</th>
+      <th>地址</th>
+      <th>備註</th>
+      <th></th>
     </tr>
   </thead>
   <tbody class="container">
